# uptime-monitor-py

./: .env.example  .gitignore  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/exceptions/: base.py  monitor.py
app/models/: __init__.py  check.py  monitor.py
app/routers/: __init__.py  monitor.py
app/schemas/: __init__.py  check.py  monitor.py
app/services/: check.py  monitor.py
tests/: conftest.py  test_healthendpoint.py  test_monitorendpoints.py
