[project]
name = "uptime-monitor"
version = "0.0.1"
authors = [
  { name = "Brendan O'Neill", email = "16559757+Brennii96@users.noreply.github.com" }
]
dependencies = [
  "fastapi[standard]",
  "SQLAlchemy",
]
[project.optional-dependencies]
dev = [
  "pytest",
  "httpx2",
]
[tool.fastapi]
entrypoint = "app.main:app"